src/objects/LAC_Metric__c.object
<CustomObject>
    <description>Metrics for the LAC shared dashboards</description>
    <fields>
        <fullName>CalculatorClass__c</fullName>
        <description>The name of class that will be used to calculate this metric. This class should implement the ILacMetricCalculator interface and extend the LacMetricCalculatorBase class</description>
        <label>CalculatorClass</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A short description about the metric</description>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>A unique name for the metric</description>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>LAC Metric</label>
    <nameField>
        <label>LAC Metric Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAC Metrics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>